<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_publisher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="luis.anchundia27@gmail.com">pi</maintainer>
  <license>TODO: License declaration</license>

  <!-- ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Python dependencies -->
  <exec_depend>python3-adfruit-circuitpython-bno08x</exec_depend>
  <exec_depend>python3-adfruit-circuitpython-busdevice</exec_depend>
  <exec_depend>python3-adfruit-blinka</exec_depend>
  <exec_depend>python3-lgpio</exec_depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
